@@ -1,3 +1,9 @@
+2005-06-21  John ffitch  <jpff@codemist.co.uk>
+
+	* OOps/ugens5.c (porset, port, tonset, tone, tonsetx, tonex,
+	atone, atonex, rsnset, reson, rsnsetx, resonx, areson): Work in
+	doubles internally
+
 2005-06-20  John ffitch  <jpff@codemist.co.uk>
 
 	* InOut/OSCrecv.c (OSC_listdeinit): Fixed a typo
